Header component was created and the necessary changes to its operation were made. Some situational files were also fixed.

--- a/games-critical-score/src/components/Card/style.css
+++ b/games-critical-score/src/components/Card/style.css
@@ -10,14 +10,14 @@
   margin: 0px 12px 40px 12px;
 }
 
-.title {
+.card-title {
   margin: 0;
   font-weight: bold;
   font-size: 18px;
   text-align: center;
 }
 
-.title::after {
+.card-title::after {
   content: '';
   display: block;
   margin: 8px auto 20px;
