Changes in style of header to set size, tracking and style.

--- a/games-critical-score/src/components/Header/style.css
+++ b/games-critical-score/src/components/Header/style.css
@@ -3,3 +3,10 @@
   color: #537fa6;
   margin: 60px 0px;
 }
+
+.header-title {
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+}
